# BAND-AI

./: .env.example  .gitignore  ARCHITECTURE.md  BAND AI AGENTS.md  DEMO.md  LICENSE  README.md  agent_config.yaml.example  hello.rs  pyproject.toml
.github/workflows/: ci.yml
REFERENCE-AGENT/: test_langgraph_interrupt.py
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  CLI_USAGE.md  CONFIGURATION.md
experiments/: README.md  test_pickle_saver.py
src/: streamlit_app.py
src/code_assistant/: __init__.py  main.py
src/code_assistant/agents/: __init__.py  base.py  code_reviewer.py  coder.py  conductor.py  debugger.py  mergemaster.py  plan_reviewer.py  planner.py  test_engineer.py
src/code_assistant/band_integration/: __init__.py  agent_factory.py  communication.py  state_manager.py
src/code_assistant/interfaces/: __init__.py  cli.py
src/code_assistant/utils/: __init__.py  config.py  logging.py
src/code_assistant/workflows/: __init__.py  coding_pipeline.py
tests/: __init__.py  test_code_assistant.py  test_langgraph_pipeline.py
